--- a/modules/swagger-codegen/src/main/resources/aspnetcore/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/aspnetcore/model.mustache
@@ -59,7 +59,7 @@ namespace {{packageName}}.Models
         /// Returns the JSON string presentation of the object
         /// </summary>
         /// <returns>JSON string presentation of the object</returns>
-        public {{#parent}} new {{/parent}}string ToJson()
+        public string ToJson()
         {
             return JsonConvert.SerializeObject(this, Formatting.Indented);
         }
