--- a/modules/swagger-codegen/src/main/resources/aspnetcore/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/aspnetcore/model.mustache
@@ -34,7 +34,7 @@ namespace {{packageName}}.Models
         public {{{datatypeWithEnum}}}{{#isEnum}}{{^isContainer}}?{{/isContainer}}{{/isEnum}} {{name}} { get; set; }
         {{/isEnum}}
         {{^isEnum}}
-        public {{{datatype}}} {{name}} { get; {{#isReadOnly}}private {{/isReadOnly}}set; }
+        public {{#isListContainer}}IEnumerable<{{{items.baseType}}}>{{/isListContainer}}{{^isListContainer}}{{{datatype}}}{{/isListContainer}} {{name}} { get; {{#isReadOnly}}private {{/isReadOnly}}set; }
         {{/isEnum}}
         {{#hasMore}}
         {{/hasMore}}
